# SCMLib

./: CMakeLists.txt  README.md  library.properties  watchBuild.sh
src/: CMakeLists.txt  Example.cpp  Example.h  SCMPacket.cpp  SCMPacket.h  SCMParser.cpp  SCMParser.h
test/: CMakeLists.txt  SCMPacketTest.h  SCMParserTest.h  TEST_HELP_MACROS.h  TestMain.cpp
